--- a/express/views/admin/add-product.hbs
+++ b/express/views/admin/add-product.hbs
@@ -4,6 +4,7 @@
             <label for="title">Title</label>
             <input type="text" name="title" id="title">
         </div>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <button type="submit">Add product</button>
     </form>
 </main>
